New Project Added

--- a/product-detail.html
+++ b/product-detail.html
@@ -13,11 +13,24 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <!---------------------------------------- Custom CSS Link ----------------------------------------->
+
+    <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <!-------------------------------------------- Favicon --------------------------------------------->
+
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon.svg"
+      type="image/x-icon"
+    />
+
     <title>Product Details</title>
   </head>
   <body>
     <!-------------------------------------- Hero Section Started -------------------------------------->
-    
+
     <section class="navbar-bg">
       <div class="container">
         <div class="row">
