--- a/store.html
+++ b/store.html
@@ -12,7 +12,19 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
+    <!---------------------------------------- Custom CSS Link ----------------------------------------->
+
     <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <!-------------------------------------------- Favicon --------------------------------------------->
+
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon.svg"
+      type="image/x-icon"
+    />
+
     <title>Store</title>
   </head>
   <body>
@@ -60,13 +72,13 @@
                     <p class="fw-off-price">10% OFF</p>
                   </div>
                 </div>
-               <a href="/product-detail.html">
-                <button
-                class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
-              >
-                Add to Bag
-              </button>
-               </a>
+                <a href="/product-detail.html">
+                  <button
+                    class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
+                  >
+                    Add to Bag
+                  </button>
+                </a>
               </div>
             </div>
           </div>
@@ -108,11 +120,11 @@
                 </div>
                 <a href="/product-detail.html">
                   <button
-                  class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
-                >
-                  Add to Bag
-                </button>
-                 </a>
+                    class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
+                  >
+                    Add to Bag
+                  </button>
+                </a>
               </div>
             </div>
           </div>
@@ -154,11 +166,11 @@
                 </div>
                 <a href="/product-detail.html">
                   <button
-                  class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
-                >
-                  Add to Bag
-                </button>
-                 </a>
+                    class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
+                  >
+                    Add to Bag
+                  </button>
+                </a>
               </div>
             </div>
           </div>
@@ -200,11 +212,11 @@
                 </div>
                 <a href="/product-detail.html">
                   <button
-                  class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
-                >
-                  Add to Bag
-                </button>
-                 </a>
+                    class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
+                  >
+                    Add to Bag
+                  </button>
+                </a>
               </div>
             </div>
           </div>
@@ -246,11 +258,11 @@
                 </div>
                 <a href="/product-detail.html">
                   <button
-                  class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
-                >
-                  Add to Bag
-                </button>
-                 </a>
+                    class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
+                  >
+                    Add to Bag
+                  </button>
+                </a>
               </div>
             </div>
           </div>
@@ -292,11 +304,11 @@
                 </div>
                 <a href="/product-detail.html">
                   <button
-                  class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
-                >
-                  Add to Bag
-                </button>
-                 </a>
+                    class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
+                  >
+                    Add to Bag
+                  </button>
+                </a>
               </div>
             </div>
           </div>
@@ -338,11 +350,11 @@
                 </div>
                 <a href="/product-detail.html">
                   <button
-                  class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
-                >
-                  Add to Bag
-                </button>
-                 </a>
+                    class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
+                  >
+                    Add to Bag
+                  </button>
+                </a>
               </div>
             </div>
           </div>
@@ -384,11 +396,11 @@
                 </div>
                 <a href="/product-detail.html">
                   <button
-                  class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
-                >
-                  Add to Bag
-                </button>
-                 </a>
+                    class="btn btn-store-bg border-0 text-white px-4 py-2 rounded-3"
+                  >
+                    Add to Bag
+                  </button>
+                </a>
               </div>
             </div>
           </div>
