--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
       crossorigin="anonymous"
     />
 
-    <!---------------------------------------- Custom CSS Link ------------------------------------------>
+    <!---------------------------------------- Custom CSS Link ----------------------------------------->
 
     <link rel="stylesheet" href="./assets/css/style.css" />
 
-    <!-------------------------------------------- Slik Slider CDN ------------------------------------------->
+    <!-------------------------------------------- Favicon --------------------------------------------->
+
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon.svg"
+      type="image/x-icon"
+    />
+
+    <!---------------------------------------- Slik Slider CDN ----------------------------------------->
 
     <link
       rel="stylesheet"
@@ -34,7 +42,24 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- Font Awesome CDN -->
+    <!-------------------------------------------- OWL Slider CDN -------------------------------------------->
+
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    /> -->
+
+    <!---------------------------------------- Font Awesome CDN ---------------------------------------->
 
     <link
       rel="stylesheet"
@@ -816,7 +841,7 @@
 
     <!----------------------------------- Testimonials Section Started --------------------------------->
 
-    <section class="px-2" id="testimonial">
+    <section id="testimonial">
       <div class="container">
         <h1 class="text-center py-5">Testimonials</h1>
         <div class="row slider gy-5 py-md-5 py-5">
@@ -1034,7 +1059,7 @@
               randomised words 
             </p>
             <div class="row justify-content-center mt-lg-5 mt-2">
-              <div class="col-8 col-lg-4">
+              <div class="col-7 col-lg-4">
                 <div class="email-input">
                   <input
                     type="email"
@@ -1045,7 +1070,7 @@
                   />
                 </div>
               </div>
-              <div class="col-4 col-lg-2">
+              <div class="col-5 col-lg-2">
                 <button class="btn btn-bg-sky text-white">Subscribe</button>
               </div>
             </div>
@@ -1272,23 +1297,65 @@
         ],
       });
     </script>
-<script>
-  // Go to Top Button Hide on Top of the Page
+    <script>
+      // Go to Top Button Hide on Top of the Page
 
-  const goTopBtn = document.getElementById("go-top-btn");
+      const goTopBtn = document.getElementById("go-top-btn");
 
-  window.addEventListener("scroll", () => {
-    if (window.scrollY > 0) {
-      goTopBtn.classList.add("show");
-    } else {
-      goTopBtn.classList.remove("show");
-    }
-  });
+      window.addEventListener("scroll", () => {
+        if (window.scrollY > 0) {
+          goTopBtn.classList.add("show");
+        } else {
+          goTopBtn.classList.remove("show");
+        }
+      });
 
-  goTopBtn.addEventListener("click", () => {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  });
-</script>
+      goTopBtn.addEventListener("click", () => {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      });
+    </script>
+
+    <!---------------- OWL -------------->
+    <!-- <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script>
+      $(".owl-carousel").owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: false,
+        dots: false,
+        autoplay: true,
+        slidesToShow: 1,
+        slidesToScroll: 1,
+        autoplayTimeout: 3000,
+        stagePadding: 0,
+        responsive: {
+          0: {
+            items: 1,
+          },
+          600: {
+            items: 1,
+          },
+
+          1000: {
+            items: 1,
+          },
+          1400: {
+            items: 1,
+          },
+        },
+      });
+    </script> -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
