OWL Carousal Fixed

--- a/index.html
+++ b/index.html
@@ -42,22 +42,23 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-------------------------------------------- OWL Slider CDN -------------------------------------------->
+    <!-------------- OWL -------------->
 
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
       integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
       integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> -->
+    />
 
     <!---------------------------------------- Font Awesome CDN ---------------------------------------->
 
@@ -842,10 +843,10 @@
     <!----------------------------------- Testimonials Section Started --------------------------------->
 
     <section id="testimonial">
+      <h1 class="text-center py-5">Testimonials</h1>
       <div class="container">
-        <h1 class="text-center py-5">Testimonials</h1>
-        <div class="row slider gy-5 py-md-5 py-5">
-          <div class="col-md-12 px-2">
+        <div class="row d-flex justify-content-center align-items-center">
+          <div class="owl-carousel owl-theme items_images">
             <div class="item">
               <div class="border border-1 p-4 testimonial-card">
                 <div class="quote-icon">
@@ -876,8 +877,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-12 px-2">
             <div class="item">
               <div class="border border-1 p-4 testimonial-card">
                 <div class="quote-icon">
@@ -908,8 +907,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-12 px-2">
             <div class="item">
               <div class="border border-1 p-4 testimonial-card">
                 <div class="quote-icon">
@@ -940,8 +937,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-12 px-2">
             <div class="item">
               <div class="border border-1 p-4 testimonial-card">
                 <div class="quote-icon">
@@ -972,8 +967,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-12 px-2">
             <div class="item">
               <div class="border border-1 p-4 testimonial-card">
                 <div class="quote-icon">
@@ -1004,8 +997,6 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-12 px-2">
             <div class="item">
               <div class="border border-1 p-4 testimonial-card">
                 <div class="quote-icon">
@@ -1316,7 +1307,8 @@
     </script>
 
     <!---------------- OWL -------------->
-    <!-- <script
+
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
       crossorigin="anonymous"
@@ -1335,27 +1327,25 @@
         nav: false,
         dots: false,
         autoplay: true,
-        slidesToShow: 1,
-        slidesToScroll: 1,
-        autoplayTimeout: 3000,
+        autoplayTimeout: 2000,
         stagePadding: 0,
         responsive: {
           0: {
             items: 1,
           },
           600: {
-            items: 1,
+            items: 2,
           },
 
           1000: {
-            items: 1,
+            items: 3,
           },
           1400: {
-            items: 1,
+            items: 3,
           },
         },
       });
-    </script> -->
+    </script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
