--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,104 @@
 
     <!------------------------------------ Testimonials Section Ended ---------------------------------->
 
-    <!------------------------------------ Newsletter Section Started ----------------------------------->
+    <!---------------------------------- Pricing Plans Section Started --------------------------------->
+
+    <section>
+      <div class="container">
+        <h1 class="text-center py-5">Pricing Plans</h1>
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <div class="pricing-plans-card p-4">
+              <img
+                src="./assets/images/basic-plan.svg"
+                class="img-fluid border border-1 border-light rounded-3"
+                alt=""
+              />
+              <h3 class="py-3 m-0">Basic</h3>
+              <p class="color-white">
+                Unleash the Power of Your Business with Pro Plan.
+              </p>
+              <div class="d-flex align-items-center gap-2">
+                <div>
+                  <h1>$34</h1>
+                </div>
+                <div>
+                  <sub class="color-white">per month</sub>
+                </div>
+              </div>
+              <hr />
+              <div class="d-flex align-items-center gap-3 my-3">
+                <div>
+                  <img
+                    src="./assets/images/check-icon.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <p class="m-0">Enhanced Analytics</p>
+                </div>
+              </div>
+              <div class="d-flex align-items-center gap-3 my-3">
+                <div>
+                  <img
+                    src="./assets/images/check-icon.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <p class="m-0">Custom Domain</p>
+                </div>
+              </div>
+              <div class="d-flex align-items-center gap-3 my-3">
+                <div>
+                  <img
+                    src="./assets/images/check-icon.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <p class="m-0">E-commerce Integration</p>
+                </div>
+              </div>
+              <div class="d-flex align-items-center gap-3 my-3">
+                <div>
+                  <img
+                    src="./assets/images/check-icon.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <p class="m-0">Priority Support</p>
+                </div>
+              </div>
+              <div class="d-flex align-items-center gap-3 my-3">
+                <div>
+                  <img
+                    src="./assets/images/check-icon.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <div>
+                  <p class="m-0">Advanced Security</p>
+                </div>
+              </div>
+              <button class="btn btn-outline-dark w-100 rounded-3">
+                Get Started
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!----------------------------------- Pricing Plans Section Ended ---------------------------------->
+
+    <!------------------------------------ Newsletter Section Started ---------------------------------->
 
     <section class="my-5">
       <div class="container">
